# easy_graphing

./: LICENSE  README.md  main.py  pyproject.toml
src/easy_graphing/: graph.py
